Fix some design issues on mobile

--- a/public/style.comp.css
+++ b/public/style.comp.css
@@ -873,7 +873,7 @@ pre {
   @media only screen and (max-width: 625px) {
     .auth {
       margin-top: 10rem;
-      width: 42rem; } }
+      width: 44rem; } }
   @media only screen and (max-width: 400px) {
     .auth {
       margin-top: 10rem;
