--- a/sass/src/components/_auth.scss
+++ b/sass/src/components/_auth.scss
@@ -18,7 +18,7 @@
 
   @media only screen and (max-width: 625px) {
     margin-top: 10rem;
-    width: 42rem;
+    width: 44rem;
   }
 
   @media only screen and (max-width: 400px) {
